<resources>
    <string name="app_name">News App</string>
    <string name="welcome">Welcome</string>
    <string name="explore">Explore</string>
    <string name="live_chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="wish_list">Wish List</string>
    <string name="e_magazine">E-Magazine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="somthing_wrong">Some thing Wrong</string>
    <string name="home">Home</string>
    <string name="details">Details</string>
    <string name="open_website">open website</string>
    <string name="browser">Browser</string>
    <string name="search">Search</string>
</resources>