<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/articleFragment">

    <fragment
        android:id="@+id/articleFragment"
        android:name="com.link.newsapp.presenter.article.ArticleFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_article" >
        <action
            android:id="@+id/action_articleFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.link.newsapp.presenter.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="article"
            app:argType="com.link.newsapp.data.model.Article" />
        <action
            android:id="@+id/action_detailsFragment_to_browserFragment"
            app:destination="@id/browserFragment" />
    </fragment>
    <fragment
        android:id="@+id/browserFragment"
        android:name="com.link.newsapp.presenter.browser.BrowserFragment"
        android:label="@string/browser"
        tools:layout="@layout/fragment_browser" >
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
</navigation>