<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:navGraph="@navigation/main_nav" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/drawer_header" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/btn_explore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_bg"
                    android:button="@null"
                    android:drawableStart="@drawable/explore"
                    android:drawablePadding="16dp"
                    android:paddingStart="24dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/explore"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/btn_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/radio_bg"
                    android:button="@null"
                    android:drawableStart="@drawable/chat"
                    android:drawablePadding="16dp"
                    android:paddingStart="24dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/live_chat"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/btn_gallary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/radio_bg"
                    android:button="@null"

                    android:drawableStart="@drawable/gallery"
                    android:drawablePadding="16dp"
                    android:paddingStart="24dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/gallery"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/btn_wish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/radio_bg"
                    android:button="@null"
                    android:drawableStart="@drawable/wish"
                    android:drawablePadding="16dp"
                    android:paddingStart="24dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/wish_list"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/btn_magazine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/radio_bg"
                    android:button="@null"
                    android:drawableStart="@drawable/magazine"
                    android:drawablePadding="16dp"
                    android:paddingStart="24dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/e_magazine"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />


            </RadioGroup>


        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>